<resources>
    <string name="app_name">Toko Paerbe</string>
    <string name="language">EN</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_image">user image</string>
    <string name="username">John Doe</string>
    <string name="menu_cart_title">Cart</string>
    <string name="menu_notification_title">Notification</string>
    <string name="another">or Log In with</string>
    <string name="another2">or Register with</string>
    <string name="term_condition_register"><![CDATA[With the registration here, you agree to the Terms & Conditions as well as the Privacy Policy of TokoPhincon.]]></string>
    <string name="term_condition_login"><![CDATA[With the registration here, you agree to the Terms & Conditions as well as the Privacy Policy of TokoPhincon.]]></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="filter">Filter</string>
    <string name="item_name">Lenovo Legion 7 16 I7 11800 \n 16GB 1TB SSD RTX3070 8GB</string>
    <string name="register">Register</string>
    <string name="minimum_character">Minimum 8 characters.</string>
    <string name="login">Log In</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="join_now">Join Now</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="logout">Log Out</string>
    <string name="en">EN</string>
    <string name="id">ID</string>
    <string name="finish">Finish</string>
    <string name="menu">Menu</string>
    <string name="home">Home</string>
    <string name="store">Store</string>
    <string name="wishlist">Wishlist</string>
    <string name="transaction">Transaction</string>
    <string name="add_cart">+ Cart</string>
    <string name="search">Search</string>
    <string name="example_email">Example: test@gmail.com</string>
    <string name="reset">Reset</string>
    <string name="sort">Sort</string>
    <string name="category">Category</string>
    <string name="select_image">Select Image</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="lowest">Lowest</string>
    <string name="highest">Highest</string>
    <string name="btn_show_product">Show Product</string>
    <string name="items">%total% items</string>
    <string name="inValidEmail">Email Is Not Valid</string>
    <string name="register_validation">Please fill Email and Password</string>
    <string name="sale">Sold %sale%</string>
    <string name="detail_product">Product Detail</string>
    <string name="product_price">Rp23.499.000</string>
    <string name="choose_variant">Choose Variant</string>
    <string name="product_desc">Product Description</string>
    <string name="user_review">User Review</string>
    <string name="see_all">See All Review</string>
    <string name="buy_now">Buy Now</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="user_satisfaction">%satisfaction% User satisfied</string>
    <string name="rating_review">%rating% rating . %review% review</string>
    <string name="rating_sold_sale">%rating% | Sold %sale%</string>
    <string name="cart_title">Cart</string>
    <string name="select_all">Select All</string>
    <string name="delete">Delete</string>
    <string name="total_payment">Total Payment</string>
    <string name="buy">Buy</string>
    <string name="email_is_required">Email is required</string>
    <string name="password_is_required">Password is required</string>
    <string name="failed_to_send_profile">Failed to Send Profile</string>
    <string name="name_can_not_be_null">Name Can Not be Null</string>
    <string name="email_is_invalid">Email is invalid</string>
    <string name="password_is_invalid">Password is invalid</string>
    <string name="successful_added_to_cart">Success Added to Cart</string>
    <string name="successful_added_to_wishlist">Success Added to Wishlist</string>
    <string name="stock">Stock %stock%</string>
    <string name="success_delete_from_wishlist">Success Delete from Wishlist</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\\\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="are_you_sure">Are You sure want to delete this item?</string>
    <string name="item_will_deleted">Item will deleted from Cart</string>
    <string name="cancel_btn_cart">Cancel</string>
    <string name="delete_btn_cart">Delete</string>
    <string name="review_filter">Review</string>
    <string name="sales_review">Sales</string>
    <string name="lowest_price_filter">Lowest Price</string>
    <string name="highest_price_filter">Highest Price</string>
    <string name="apple_chip">Apple</string>
    <string name="asus_chip">Asus</string>
    <string name="dell_chip">Dell</string>
    <string name="lenovo_chip">Lenovo</string>
    <string name="price_title">Price</string>
    <string name="review_title">Review</string>
    <string name="choose_payment">Choose Payment</string>
    <string name="payment">Payment</string>
    <string name="checkout_title">Checkout</string>
</resources>