<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.others.BottomSheetFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/modal"
            android:layout_width="20dp"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:background="@android:color/darker_gray" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/modal">

            <TextView
                android:id="@+id/tv_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:fontFamily="@font/poppins_bold"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/filter" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_reset"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_marginEnd="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primaryColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/reset"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/filter"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/chip_group_order"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filter"
            tools:text="@string/sort" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/order"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="50dp"
            app:singleLine="false">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_review"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="Ulasan"
                app:chipCornerRadius="5dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_sales"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="Penjualan"
                app:chipCornerRadius="5dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_lowest_price"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="Harga Terendah"
                app:chipCornerRadius="5dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_highest_price"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="Harga Tertinggi"
                app:chipCornerRadius="5dp" />

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/chip_group_order"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/category" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/category"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            app:singleLine="false">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip1"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="Apple"
                app:chipCornerRadius="5dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip2"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="Asus"
                app:chipCornerRadius="5dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip3"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="Dell"
                app:chipCornerRadius="5dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip4"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="Lenovo"
                app:chipCornerRadius="5dp" />

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/chip_group_category"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="Harga" />

        <LinearLayout
            android:id="@+id/price_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/price"
            android:layout_marginStart="16dp"
            android:weightSum="2">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_lowest_price"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                tools:hint="@string/lowest"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_highest_price"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                tools:hint="@string/highest"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_show_product"
            style="@style/Widget.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/price_input"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="10dp"
            tools:Text="@string/btn_show_product" />

    </RelativeLayout>

</FrameLayout>