<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.auth.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                style="@style/headline"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                app:titleCentered="true"
                tools:ignore="MissingConstraints"
                tools:title="@string/profile">

            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.AppBarLayout>


        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/appbar" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image_container"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="28dp"
            android:background="@color/primaryColor"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appbar"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.ConerSize50percent"
            tools:src="@drawable/ic_person_outlined_white" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameTextInput"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_container"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:imeOptions="actionDone"
                android:inputType="textPersonName"
                tools:hint="@string/name" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_finish"
            android:layout_width="340dp"
            android:layout_height="40dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/button_purple"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center_horizontal|center_vertical"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameTextInput"
            tools:text="@string/finish" />

        <TextView
            android:id="@+id/syarat_ketentuan"
            android:layout_width="0dp"
            android:layout_height="34dp"
            android:layout_marginHorizontal="10dp"
            android:clickable="true"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center_vertical|center_horizontal"
            android:lineHeight="16sp"
            android:lineSpacingExtra="-2sp"
            android:textColor="#49454F"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_finish"
            app:layout_constraintVertical_bias="0.165"
            tools:text="@string/term_condition_register" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/loading_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:visibility="gone" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_loading"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:visibility="gone"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading_animation" />
</FrameLayout>
